fix(mobile): add expo-av plugin to app.json & add session handoff docs